removed double graph in validated content, now works on normal graphs